Added authenticaiton and UI